--- a/Lab4.csproj
+++ b/Lab4.csproj
@@ -1,29 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="2.20.0" />
-    <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.20.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Silk.NET" Version="2.20.0"/>
+        <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.20.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\slot_machine.obj" />
-    <EmbeddedResource Include="Resources\slot_machine.obj" />
-    <None Remove="Resources\minicooper.obj" />
-    <EmbeddedResource Include="Resources\minicooper.obj" />
-    <None Remove="Resources\bombardino_crocodilo.obj" />
-    <EmbeddedResource Include="Resources\bombardino_crocodilo.obj" />
-    <None Remove="Resources\teapot.obj" />
-    <EmbeddedResource Include="Resources\teapot.obj" />
-    <None Remove="Resources\teapot2.obj" />
-    <EmbeddedResource Include="Resources\teapot2.obj" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Resources\slot_machine.obj"/>
+        <EmbeddedResource Include="Resources\slot_machine.obj"/>
+        <None Remove="Resources\minicooper.obj"/>
+        <EmbeddedResource Include="Resources\minicooper.obj"/>
+        <None Remove="Resources\bombardino_crocodilo.obj"/>
+        <EmbeddedResource Include="Resources\bombardino_crocodilo.obj"/>
+        <None Remove="Resources\teapot.obj"/>
+        <None Remove="Resources\teapot2.obj"/>
+        <EmbeddedResource Include="Resources\teapot2.obj"/>
+        <None Remove="Resources\Suzanne.obj"/>
+        <EmbeddedResource Include="Resources\Suzanne.obj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="Resources\teapot.obj"/>
+    </ItemGroup>
 
 </Project>
